(library
 (name ocamlorg)
 (public_name ocamlorg.global)
 (libraries ppx_show.runtime ppx_stable)
 (preprocess
  (pps ppx_deriving_yaml ppx_stable ppx_show)))

(rule
 (deps (universe))
 (action
  (with-stdout-to
   commit.ml
   (progn
    (echo "let hash = \"")
    (pipe-stdout
     (run "git" "rev-parse" "HEAD")
     (run "tr" "-d" "\n"))
    (echo "\"\n")))))
